--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -216,10 +216,17 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Bullet.cs" />
     <Compile Include="Assets\CameraManager.cs" />
+    <Compile Include="Assets\Enemy.cs" />
+    <Compile Include="Assets\EnemyManager.cs" />
     <Compile Include="Assets\enemyMovement.cs" />
     <Compile Include="Assets\fuckThisShit.cs" />
     <Compile Include="Assets\GunManager.cs" />
+    <Compile Include="Assets\MapManager.cs" />
+    <Compile Include="Assets\MrGunManager.cs" />
+    <Compile Include="Assets\Player.cs" />
+    <Compile Include="Assets\PlayerManager.cs" />
     <Compile Include="Assets\PlayerMovement.cs" />
     <Reference Include="UnityEngine.UI">
       <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
