--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -69,7 +69,11 @@
     <Compile Include="Assets\Scripts\GunManager.cs" />
     <Compile Include="Assets\Scripts\MapManager.cs" />
     <Compile Include="Assets\Scripts\MenuManager.cs" />
+    <Compile Include="Assets\Scripts\Model\Ad.cs" />
+    <Compile Include="Assets\Scripts\Model\BasicEventManager.cs" />
     <Compile Include="Assets\Scripts\Model\EnemyModel.cs" />
+    <Compile Include="Assets\Scripts\Model\EventListener.cs" />
+    <Compile Include="Assets\Scripts\Model\GameEvent.cs" />
     <Compile Include="Assets\Scripts\Model\GameModel.cs" />
     <Compile Include="Assets\Scripts\Model\PlayerModel.cs" />
     <Compile Include="Assets\Scripts\MrGunManager.cs" />
@@ -77,7 +81,9 @@
     <Compile Include="Assets\Scripts\PlayerManager.cs" />
     <Compile Include="Assets\Scripts\PlayerMovement.cs" />
     <Compile Include="Assets\Scripts\Presenter\EnemyPresenter.cs" />
+    <Compile Include="Assets\Scripts\Presenter\EventManager.cs" />
     <Compile Include="Assets\Scripts\Presenter\GameManager.cs" />
+    <Compile Include="Assets\Scripts\Presenter\GoogleAd.cs" />
     <Compile Include="Assets\Scripts\Presenter\PlayerPresenter.cs" />
     <Compile Include="Assets\Scripts\Presenter\ServiceLocator.cs" />
     <Reference Include="Unity.Timeline.Editor">
